--- a/.github/workflows/docker-to-ecr.yml
+++ b/.github/workflows/docker-to-ecr.yml
@@ -4,7 +4,7 @@ name: Build and Push Docker Image to ECR
 on:
   push:
     branches:
-      - main  # or your deployment branch
+      - master  # or your deployment branch
 
 jobs:
   build-and-push:
