--- a/.github/workflows/docker-to-ecr.yml
+++ b/.github/workflows/docker-to-ecr.yml
@@ -1,10 +1,8 @@
-
 name: Build and Push Docker Image to ECR
 
 on:
   push:
-    branches:
-      - master  # or your deployment branch
+    branches: [ master ]  # ✅ Changed from 'main' to 'master'
 
 jobs:
   build-and-push:
@@ -19,20 +17,14 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ap-south-1
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker image
+      - name: Build, tag, and push image to ECR
         run: |
-          docker build -t ${{ secrets.ECR_REPOSITORY }} .
-
-      - name: Tag Docker image
-        run: |
-          docker tag ${{ secrets.ECR_REPOSITORY }}:latest ${{ secrets.ECR_REPOSITORY }}:latest
-
-      - name: Push Docker image to ECR
-        run: |
-          docker push ${{ secrets.ECR_REPOSITORY }}:latest
+          docker build -t my-app .
+          docker tag my-app:latest <your_aws_account_id>.dkr.ecr.ap-south-1.amazonaws.com/my-app:latest
+          docker push <331086148814>.dkr.ecr.ap-south-1.amazonaws.com/my-app:latest
