--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,19 +1,12 @@
+FROM python:3.9
 
-# Use a lightweight Python base image
-FROM python:3.10-slim
-
-# Set working directory inside the container
 WORKDIR /app
 
-# Copy dependency file and install packages
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
-# Copy all project files
 COPY . .
 
-# Expose Streamlit's default port
 EXPOSE 8501
 
-# Run the Streamlit app
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.enableCORS=false"]
