--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-
-venv/
 __pycache__/
 *.pyc
-*.pkl
-.DS_Store
+*.pyo
+*.pyd
+*.swp
+*.DS_Store
+*.egg-info/
+*.log
+.vscode/
+.venv/
+.env
+.git
+.gitignore
